syntax = "proto3";

package LightspeedTyperacing;

enum GameMode {
    Invalid = 0;
    MostCommon = 1;
    HundredMostCommon = 2;
    Dictionary = 3;
    LeastCommonWords = 4;
    CopyPastas = 5;
    ClickRace = 6;
    Numbers = 7;
    Marathon = 8;
    HomeRow = 9;
    UpperRow = 10;
    RightHand = 11;
    LeftHand = 12;
    AlternatingHand = 13;
    Random = 14;
    LongestHundred = 15;
}

message Player {
    string name = 1;
    string id = 2;
    bool is_bot = 3;
}

message OneofRequest {
    string sender_id = 1;
    oneof request {
        FindGameRequest find_game = 2;
        TypeWordRequest type_word = 3;
    }
}

message FindGameRequest {
    string player_name = 1;
    string player_token = 2;
    repeated GameMode game_modes = 3;
}

message TypeWordRequest {
    string word = 1;
    repeated float char_completion_times = 2;
}

message OneofUpdate {
    string recipient_id = 1;
    oneof update {
        GameOver game_over = 2;
        GameStarted game_started = 3;
        GameStarting game_starting = 4;
        PlayerCompleted player_completed = 5;
        PlayerJoinedGame player_joined_game = 6;
        WordFinished word_finished = 7;
        YouveBeenAddedToGame youve_been_added_to_game = 8;
        PlayerDisconnected player_disconnected = 9;
    }
}

message GameOver {    
    float end_time_s = 1;
}

message GameStarted {
}

message GameStarting {
    float countdown = 1;
    string phrase = 2;
}

message PlayerCompleted {
    string player_id = 1;
    int32 place = 2;
    repeated float raw_wpm_by_second = 3;
    repeated float wpm_by_second = 4;
    float wpm = 5;
}

message PlayerJoinedGame {
    Player player = 1;
    string game_id = 2;
}

message WordFinished {
    string player_id = 1;
    float percent_complete = 2;
    float velocity_km_s = 3;
    float position_km = 4;
    repeated float char_completion_times = 5;
    float wpm = 6;
}

message YouveBeenAddedToGame {
    string game_id = 2;
    repeated Player current_players = 3;
}

message PlayerDisconnected {
    string player_id = 1;
    bool removed = 2;
}